...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                <state key="normal" title="Next">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" title="I do not have this">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" title="Taken">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Statistics Selection" id="VqI-4d-g0v"/>
                    <connections>
                        <outlet property="medicationButton" destination="YNs-xl-ycQ" id="90d-5d-94Y"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="EMERGENCY ACTION">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jLK-yU-QeO">
                                        <inset key="titleEdgeInsets" minX="0.0" minY="140" maxX="0.0" maxY="0.0"/>
                                        <state key="normal" title="STATS" backgroundImage="Stats">
                                            <color key="titleColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                        </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mYU-yy-skz">
                                        <inset key="titleEdgeInsets" minX="0.0" minY="140" maxX="0.0" maxY="0.0"/>
                                        <state key="normal" title="MAP" backgroundImage="map">
                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Am-gf-0gM">
                                        <inset key="titleEdgeInsets" minX="0.0" minY="140" maxX="0.0" maxY="0.0"/>
                                        <state key="normal" title="LEARN" backgroundImage="learn">
                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="32"/>
                                <inset key="titleEdgeInsets" minX="0.0" minY="150" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="ACTION PLAN" backgroundImage="inhaler2">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="As a doctor, learn how to use the app to help improve your patients asthma." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO
                                                            <fontDescription key="fontDescription" name="LiberationSans" family="Liberation Sans" pointSize="17"/>
                                                            <nil key="textColor"/>
...
                                <fontDescription key="fontDescription" name="LiberationSans-Bold" family="Liberation Sans" pointSize="25"/>
                                <inset key="titleEdgeInsets" minX="0.0" minY="200" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Support" backgroundImage="Inhaler">
                                    <color key="titleColor" red="0.1202454641" green="0.4030750394" blue="0.48271960019999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
