...
        var tasksList : [PendingTask] = []
        let request: NSFetchRequest<PendingTask> = PendingTask.fetchRequest()
        let sortDescriptor = NSSortDescriptor(key: "date_created", ascending: true)
        request.sortDescriptors = [sortDescriptor]
        request.fetchLimit = 2
        tasksList = try! managedObjectContext!.fetch(request)
        notificationMessage1.setTitle("No current pending tasks", for: .normal)
        notificationMessage2.setTitle("", for: .normal)
        notificationImage1.image = nil
        notificationImage2.image = nil
        if tasksList.count >= 1 {
            setNotificationMessage(typeOfNotification: tasksList[0].type!, notificationNumber: 1);
        }
...
        
        switch typeOfNotification {
        case "medicine" :
            notificationMessageButton.setTitle("Medication reminder", for: .normal)
            notificationImage.image = UIImage(named: "pill")
        case "contactGP" :
            notificationMessageButton.setTitle("Talk to your GP", for: .normal)
            notificationImage.image = UIImage(named: "call_button")
        default:
            break;
        }
    }
    
...
