...
                                    <action selector="printDeliveredNotifications:" destination="oSU-wt-Ee5" eventType="touchUpInside" id="qr6-Y1-tb2"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZFR-oo-pch">
                                <rect key="frame" x="82" y="563" width="213" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Delete All Support Records"/>
                                <connections>
                                    <action selector="deleteAllSupportRecords:" destination="oSU-wt-Ee5" eventType="touchUpInside" id="PBp-M0-jmc"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kUw-Bi-jmK">
                                <rect key="frame" x="110" y="607" width="154" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Set Worse Records"/>
                                <connections>
                                    <action selector="setWorseRecords:" destination="oSU-wt-Ee5" eventType="touchUpInside" id="6MD-Hb-NDW"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
