...
            </objects>
            <point key="canvasLocation" x="4362" y="1213"/>
        </scene>
        <!--Settings-->
        <scene sceneID="yJx-wV-OPg">
            <objects>
                <tableViewController title="Settings" id="6ax-GV-XGh" customClass="SettingsTableViewController" customModule="Pulmonis" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" id="Q28-wr-G5d">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="doctorsInputCell" textLabel="UoJ-xd-XCo" style="IBUITableViewCellStyleDefault" id="ioF-XC-CUD">
...
                                <rect key="frame" x="0.0" y="228" width="375" height="100"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QlO-9T-h9i" id="gol-Lq-kUQ">
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Reminders" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1Xs-hb-JTt">
                                            <rect key="frame" x="15" y="0.0" width="345" height="99"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
...
